



########### install files ###############

install( FILES altn.png begline.png compound.png neglookahead.png poslookahead.png select.png wordboundary.png anychar.png characters.png endline.png nonwordboundary.png repeat.png text.png error.png autoverify.png verify.png  DESTINATION ${DATA_INSTALL_DIR}/kregexpeditor/pics)




#original Makefile.am contents follow:

#pics_DATA= altn.png begline.png compound.png neglookahead.png poslookahead.png select.png wordboundary.png anychar.png characters.png endline.png nonwordboundary.png repeat.png text.png error.png autoverify.png verify.png
#picsdir = $(kde_datadir)/kregexpeditor/pics
