



########### install files ###############

install( FILES spaces.regexp anything.regexp  DESTINATION ${DATA_INSTALL_DIR}/kregexpeditor/predefined/general)




#original Makefile.am contents follow:

#pkg_DATA = spaces.regexp anything.regexp
# 
#pkgdir = $(kde_datadir)/kregexpeditor/predefined/general
# 
#EXTRA_DIST = $(pkg_DATA) 
